# opengl_project

./: CMakeLists.txt  build_and_run.sh  imgui.ini
assets/: shader.vs
assets/shaders/: grid.fs  grid.vs  screen_shader.fs  shader.fs
lib/glad/: glad.c  glad.h
lib/imguicolortextedit/: TextEditor.cpp  TextEditor.h
src/: bufferRenderer.hpp  camera.hpp  cubemap.hpp  framebuffer.hpp  lights.hpp  main.cpp  main.cpp.old  mesh.hpp  model.hpp  modelLoader.hpp  object.hpp  renderer.hpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/IO/: camera.hpp  input.hpp
src/editor/: fileExplorer.cpp  fileExplorer.hpp  fileNode.hpp  inspector.hpp  mainEditorWindows.hpp  projectLoader.hpp  scriptEditor.hpp
src/objects/: cube.hpp  model.hpp
test_project/: test_project.xml
